k8s/ImagePullBackOffTest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagepull-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imagepull-demo
  template:
    metadata:
      labels:
        app: imagepull-demo
    spec:
      containers:
        - name: app
          image: fake-image-does-not-exist:latest
