k8s/TestCrashPodDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crash-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crash-demo
  template:
    metadata:
      labels:
        app: crash-demo
    spec:
      containers:
        - name: crash-demo
          image: busybox
          command: ["/bin/sh", "-c", "exit 1"]
